# Bridging

./: .gitignore  README.md  environment.ambertools.yml  pyproject.toml  rcsb_lengths_cache.json
ARCHIVE/: README.md
ARCHIVE/CA_contact_map/: README.md
ARCHIVE/Data_curation/: README.md
ARCHIVE/MMGBSA/: README.md  (+1 more)
RESULTS/: README.md  final_resample_matrix_summary.csv
hpc/: featurize_dataset.sbatch  filter_ppb_other_large_ca64.sbatch  graphvae_augment_force_features_part_cpu.sbatch  graphvae_augment_torsions_part_cpu.sbatch  graphvae_full_gpu.sbatch  graphvae_materialize_views_cpu.sbatch  graphvae_merge_prepared_cpu.sbatch  graphvae_prepare_sharded_cpu.sbatch  graphvae_resample_gpu.sbatch  graphvae_saved_sweep_gpu.sbatch  md_run_dataset.sbatch  md_run_shard_00.sbatch  md_run_shard_01.sbatch  ml_train.sbatch  mmgbsa_prefetch_sharded_cpu.sbatch  ppb_train_cpu.sbatch  prefetch_partner_sizes.sbatch  prefetch_pdb_dataset.sbatch  prodigy_prefetch.sbatch  regression_train.sbatch  submit_graphvae_force_features_parallel.sh  submit_graphvae_force_split.sh  submit_graphvae_prepare_parallel.sh  submit_graphvae_resample_matrix.sh  submit_graphvae_torsions_parallel.sh  submit_mmgbsa_parallel.sh
paper/: Assessment Rubric _ Criteria-1-1.txt  BSc Thesis Preparation.txt  abstract.aux  abstract.tex  acknowledgments.aux  acknowledgments.tex  appendix1.aux  appendix1.tex  appendix2.aux  appendix2.tex  appendix3.aux  appendix3.tex  code.aux  code.tex  discussion.aux  discussion.tex  intro.aux  intro.tex  literature_review.aux  literature_review.tex  methods.aux  methods.tex  results.aux  results.tex  theory.aux  theory.tex  thesis.aux  thesis.bbl  thesis.bib  thesis.blg  thesis.lot  thesis.out  thesis.tex  thesis.toc
tests/: check_systems.py  test_graphvae_record_views.py  test_graphvae_sweep_prebuilt.py
(+1064 files in other folders)
