[build-system]
requires = ["setuptools>=68", "wheel", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "bridging"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "biopython",
  "easydict",
  "deeprank2==3.1.0",
  "freesasa",
  "h5py",
  "matplotlib",
  "mdtraj",
  "netCDF4",
  "numpy<2.0",
  "openmm",
  "pandas",
  "parmed",
  "pdbfixer-wheel>=1.12.4",
  "prodigy-prot",
  "python-docx",
  "pyyaml",
  "rcsb-api",
  "requests",
  "scikit-learn",
  "tables",
  "torch",
  "torch-geometric",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
